src/test/ui/issues/issue-13359.stderr
error[E0308]: mismatched types
  --> $DIR/issue-13359.rs:6:9
   |
LL |     foo(1*(1 as isize));
   |     --- ^^^^^^^^^^^^^^ expected `i16`, found `isize`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/issue-13359.rs:1:4
   |
LL | fn foo(_s: i16) { }
   |    ^^^ -------

error[E0308]: mismatched types
  --> $DIR/issue-13359.rs:10:9
   |
LL |     bar(1*(1 as usize));
   |     --- ^^^^^^^^^^^^^^ expected `u32`, found `usize`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/issue-13359.rs:3:4
   |
LL | fn bar(_s: u32) { }
   |    ^^^ -------

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
